<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>me.imdanix</groupId>
    <artifactId>wgextender-x</artifactId>
    <version>3.2.3-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>WGExtender X</name>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.release>${java.version}</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <build>
        <finalName>WGExtenderX-${project.version}</finalName>
        <defaultGoal>clean package</defaultGoal>
        <sourceDirectory>src/</sourceDirectory>
        <resources>
            <resource>
                <directory>resources/</directory>
                <filtering>true</filtering>
            </resource>
            <resource>
                <directory>${basedir}</directory>
                <includes>
                    <include>LICENSE</include>
                </includes>
            </resource>
        </resources>
    </build>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>sk89q-repo</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.13</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.sk89q.worldedit</groupId>
                    <artifactId>worldedit-bukkit</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>io.papermc</groupId>
                    <artifactId>paperlib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.sk89q</groupId>
                    <artifactId>commandbook</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.10</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>io.papermc</groupId>
                    <artifactId>paperlib</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.bstats</groupId>
                    <artifactId>bstats-bukkit</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
</project>
